# sln2cmake

./: .gitignore  LICENSE  README.md  sln2cmake.py  vcxproj2cmake.py
TestProject/: .gitignore  CMakeLists.txt  TestProject.sln
TestProject/StaticLib1/: CMakeLists.txt  StaticLib1.cpp  StaticLib1.vcxproj  framework.h
TestProject/TestProject/: CMakeLists.txt  TestProject.cpp  TestProject.vcxproj  TestProject.vcxproj.filters
TestProject/TestProject/forceincludes/: forceinclude_debug.h  forceinclude_release.h  forceinclude_test.h
